--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
-  "scripts": {
-    "start": "./node_modules/.bin/netlify-lambda serve src",
-    "build": "./node_modules/.bin/netlify-lambda build src"
-    },
+  "type": "module",
+  "engines": {
+    "node": "18.8.0"
+  },
   "dependencies": {
-    "express": "^4.18.1",
-    "netlify-lambda": "^2.0.15",
-    "serverless-http": "^3.0.2"
+    "express": "^4.18.1"
   }
 }
