--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "node": "18.8.0"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "package": "^1.0.1"
   }
 }
