--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   },
   "dependencies": {
     "express": "^4.18.1",
-    "package": "^1.0.1"
+    "package": "^1.0.1",
+    "package.json": "^2.0.1"
   }
 }
